--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"psr/log":"1.0.0",
 		"monolog/monolog":"1.19.0",
 		"psr/http-message": "1.0",
-		"symfony/http-foundation": "2.7.0"
+		"symfony/http-foundation": "2.7.0",
+		"filp/whoops":"1.1.10"
 	},
 	"require-dev" : {
 		"phpunit/phpunit": "^4.7"
