--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"monolog/monolog":"1.19.0",
 		"psr/http-message": "1.0",
 		"symfony/http-foundation": "2.7.0",
-		"filp/whoops":"1.1.10"
+		"filp/whoops":"1.1.10",
+		"packaged/querybuilder": "^0.16.1"
 	},
 	"require-dev" : {
 		"phpunit/phpunit": "^4.7"
