--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,9 @@
 		}
 	],
 	"require": {
-		"psr/log":"1.0.0",
-		"monolog/monolog":"1.19.0",
-		"psr/http-message": "1.0",
-		"symfony/http-foundation": "2.7.0",
-		"filp/whoops":"1.1.10",
-		"packaged/querybuilder": "^0.16.1"
+		"filp/whoops":"2.1.9"
 	},
 	"require-dev" : {
-		"phpunit/phpunit": "^4.7"
 	},
 	"autoload": {
 		"psr-4": {
